1362_P4_Tejada_Villa_P5/y.output
Terminales no usados en la gramática

   TOK_ERROR


Gramática

    0 $accept: programa $end

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escribirTabla funciones escribirMain sentencias TOK_LLAVEDERECHA

    2 declaraciones: declaracion
    3              | declaracion declaraciones

    4 declaracion: clase identificadores TOK_PUNTOYCOMA

    5 clase: clase_escalar
    6      | clase_vector

    7 clase_escalar: tipo

    8 tipo: TOK_INT
    9     | TOK_BOOLEAN

   10 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

   11 identificadores: identificador
   12                | identificador TOK_COMA identificadores

   13 funciones: funcion funciones
   14          | %empty

   15 funct_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR

   16 funct_name_params: funct_name TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

   17 funcion: funct_name_params sentencias TOK_LLAVEDERECHA

   18 parametros_funcion: parametro_funcion resto_parametros_funcion
   19                   | %empty

   20 resto_parametros_funcion: TOK_PUNTOYCOMA parametro_funcion resto_parametros_funcion
   21                         | %empty

   22 parametro_funcion: tipo pfid

   23 pfid: TOK_IDENTIFICADOR

   24 declaraciones_funcion: declaraciones
   25                      | %empty

   26 sentencias: sentencia
   27           | sentencia sentencias

   28 sentencia: sentencia_simple TOK_PUNTOYCOMA
   29          | bloque

   30 sentencia_simple: asignacion
   31                 | lectura
   32                 | escritura
   33                 | retorno_funcion

   34 bloque: condicional
   35       | bucle

   36 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION exp
   37           | elemento_vector TOK_ASIGNACION exp

   38 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   39 condicional: if_statement TOK_LLAVEDERECHA
   40            | if_statement TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   41 if_statement_sentencias: TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

   42 if_statement: if_statement_sentencias sentencias

   43 bucle: while_end sentencias TOK_LLAVEDERECHA

   44 while_star: TOK_WHILE TOK_PARENTESISIZQUIERDO

   45 while_end: while_star exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

   46 lectura: TOK_SCANF TOK_IDENTIFICADOR

   47 escritura: TOK_PRINTF exp

   48 retorno_funcion: TOK_RETURN exp

   49 exp: exp TOK_MAS exp
   50    | exp TOK_MENOS exp
   51    | exp TOK_DIVISION exp
   52    | exp TOK_ASTERISCO exp
   53    | TOK_MENOS exp
   54    | exp TOK_AND exp
   55    | exp TOK_OR exp
   56    | TOK_NOT exp
   57    | TOK_IDENTIFICADOR
   58    | constante
   59    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   60    | TOK_PARENTESISIZQUIERDO comparacion TOK_PARENTESISDERECHO
   61    | elemento_vector
   62    | funct_call_star lista_expresiones TOK_PARENTESISDERECHO

   63 funct_call_star: TOK_IDENTIFICADOR TOK_PARENTESISIZQUIERDO

   64 lista_expresiones: expf resto_lista_expresiones
   65                  | %empty

   66 resto_lista_expresiones: TOK_COMA expf resto_lista_expresiones
   67                        | %empty

   68 expf: exp

   69 comparacion: exp TOK_IGUAL exp
   70            | exp TOK_DISTINTO exp
   71            | exp TOK_MENORIGUAL exp
   72            | exp TOK_MAYORIGUAL exp
   73            | exp TOK_MENOR exp
   74            | exp TOK_MAYOR exp

   75 constante: constante_logica
   76          | constante_entera

   77 constante_logica: TOK_TRUE
   78                 | TOK_FALSE

   79 constante_entera: TOK_CONSTANTE_ENTERA

   80 identificador: TOK_IDENTIFICADOR

   81 escribirTabla: %empty

   82 escribirMain: %empty


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
TOK_MAIN (258) 1
TOK_INT (259) 8
TOK_BOOLEAN (260) 9
TOK_ARRAY (261) 10
TOK_FUNCTION (262) 15
TOK_IF (263) 41
TOK_ELSE (264) 40
TOK_WHILE (265) 44
TOK_SCANF (266) 46
TOK_PRINTF (267) 47
TOK_RETURN (268) 48
TOK_IGUAL (269) 69
TOK_AND (270) 54
TOK_OR (271) 55
TOK_DISTINTO (272) 70
TOK_MENORIGUAL (273) 71
TOK_MAYORIGUAL (274) 72
TOK_MENOR (275) 73
TOK_MAYOR (276) 74
TOK_NOT (277) 56
TOK_PUNTOYCOMA (278) 4 20 28
TOK_COMA (279) 12 66
TOK_PARENTESISIZQUIERDO (280) 16 41 44 59 60 63
TOK_PARENTESISDERECHO (281) 16 41 45 59 60 62
TOK_CORCHETEIZQUIERDO (282) 10 38
TOK_CORCHETEDERECHO (283) 10 38
TOK_LLAVEIZQUIERDA (284) 1 16 40 41 45
TOK_LLAVEDERECHA (285) 1 17 39 40 43
TOK_ASIGNACION (286) 36 37
TOK_MAS (287) 49
TOK_MENOS (288) 50 53
TOK_DIVISION (289) 51
TOK_ASTERISCO (290) 52
TOK_TRUE (291) 77
TOK_FALSE (292) 78
TOK_CONSTANTE_ENTERA (293) 10 79
TOK_IDENTIFICADOR (294) 15 23 36 38 46 57 63 80
TOK_ERROR (295)
MENOSU (296)


No terminales con las reglas donde aparecen

$accept (42)
    en la izquierda: 0
programa (43)
    en la izquierda: 1, en la derecha: 0
declaraciones (44)
    en la izquierda: 2 3, en la derecha: 1 3 24
declaracion (45)
    en la izquierda: 4, en la derecha: 2 3
clase (46)
    en la izquierda: 5 6, en la derecha: 4
clase_escalar (47)
    en la izquierda: 7, en la derecha: 5
tipo (48)
    en la izquierda: 8 9, en la derecha: 7 10 15 22
clase_vector (49)
    en la izquierda: 10, en la derecha: 6
identificadores (50)
    en la izquierda: 11 12, en la derecha: 4 12
funciones (51)
    en la izquierda: 13 14, en la derecha: 1 13
funct_name (52)
    en la izquierda: 15, en la derecha: 16
funct_name_params (53)
    en la izquierda: 16, en la derecha: 17
funcion (54)
    en la izquierda: 17, en la derecha: 13
parametros_funcion (55)
    en la izquierda: 18 19, en la derecha: 16
resto_parametros_funcion (56)
    en la izquierda: 20 21, en la derecha: 18 20
parametro_funcion (57)
    en la izquierda: 22, en la derecha: 18 20
pfid (58)
    en la izquierda: 23, en la derecha: 22
declaraciones_funcion (59)
    en la izquierda: 24 25, en la derecha: 16
sentencias (60)
    en la izquierda: 26 27, en la derecha: 1 17 27 40 42 43
sentencia (61)
    en la izquierda: 28 29, en la derecha: 26 27
sentencia_simple (62)
    en la izquierda: 30 31 32 33, en la derecha: 28
bloque (63)
    en la izquierda: 34 35, en la derecha: 29
asignacion (64)
    en la izquierda: 36 37, en la derecha: 30
elemento_vector (65)
    en la izquierda: 38, en la derecha: 37 61
condicional (66)
    en la izquierda: 39 40, en la derecha: 34
if_statement_sentencias (67)
    en la izquierda: 41, en la derecha: 42
if_statement (68)
    en la izquierda: 42, en la derecha: 39 40
bucle (69)
    en la izquierda: 43, en la derecha: 35
while_star (70)
    en la izquierda: 44, en la derecha: 45
while_end (71)
    en la izquierda: 45, en la derecha: 43
lectura (72)
    en la izquierda: 46, en la derecha: 31
escritura (73)
    en la izquierda: 47, en la derecha: 32
retorno_funcion (74)
    en la izquierda: 48, en la derecha: 33
exp (75)
    en la izquierda: 49 50 51 52 53 54 55 56 57 58 59 60 61 62, en la derecha:
    36 37 38 41 45 47 48 49 50 51 52 53 54 55 56 59 68 69 70 71 72
    73 74
funct_call_star (76)
    en la izquierda: 63, en la derecha: 62
lista_expresiones (77)
    en la izquierda: 64 65, en la derecha: 62
resto_lista_expresiones (78)
    en la izquierda: 66 67, en la derecha: 64 66
expf (79)
    en la izquierda: 68, en la derecha: 64 66
comparacion (80)
    en la izquierda: 69 70 71 72 73 74, en la derecha: 60
constante (81)
    en la izquierda: 75 76, en la derecha: 58
constante_logica (82)
    en la izquierda: 77 78, en la derecha: 75
constante_entera (83)
    en la izquierda: 79, en la derecha: 76
identificador (84)
    en la izquierda: 80, en la derecha: 11 12
escribirTabla (85)
    en la izquierda: 81, en la derecha: 1
escribirMain (86)
    en la izquierda: 82, en la derecha: 1


Estado 0

    0 $accept: . programa $end

    TOK_MAIN  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: TOK_MAIN . TOK_LLAVEIZQUIERDA declaraciones escribirTabla funciones escribirMain sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  desplazar e ir al estado 3


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA . declaraciones escribirTabla funciones escribirMain sentencias TOK_LLAVEDERECHA

    TOK_INT      desplazar e ir al estado 5
    TOK_BOOLEAN  desplazar e ir al estado 6
    TOK_ARRAY    desplazar e ir al estado 7

    declaraciones  ir al estado 8
    declaracion    ir al estado 9
    clase          ir al estado 10
    clase_escalar  ir al estado 11
    tipo           ir al estado 12
    clase_vector   ir al estado 13


Estado 4

    0 $accept: programa $end .

    $default  aceptar


Estado 5

    8 tipo: TOK_INT .

    $default  reduce usando la regla 8 (tipo)


Estado 6

    9 tipo: TOK_BOOLEAN .

    $default  reduce usando la regla 9 (tipo)


Estado 7

   10 clase_vector: TOK_ARRAY . tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_INT      desplazar e ir al estado 5
    TOK_BOOLEAN  desplazar e ir al estado 6

    tipo  ir al estado 14


Estado 8

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones . escribirTabla funciones escribirMain sentencias TOK_LLAVEDERECHA

    $default  reduce usando la regla 81 (escribirTabla)

    escribirTabla  ir al estado 15


Estado 9

    2 declaraciones: declaracion .
    3              | declaracion . declaraciones

    TOK_INT      desplazar e ir al estado 5
    TOK_BOOLEAN  desplazar e ir al estado 6
    TOK_ARRAY    desplazar e ir al estado 7

    $default  reduce usando la regla 2 (declaraciones)

    declaraciones  ir al estado 16
    declaracion    ir al estado 9
    clase          ir al estado 10
    clase_escalar  ir al estado 11
    tipo           ir al estado 12
    clase_vector   ir al estado 13


Estado 10

    4 declaracion: clase . identificadores TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  desplazar e ir al estado 17

    identificadores  ir al estado 18
    identificador    ir al estado 19


Estado 11

    5 clase: clase_escalar .

    $default  reduce usando la regla 5 (clase)


Estado 12

    7 clase_escalar: tipo .

    $default  reduce usando la regla 7 (clase_escalar)


Estado 13

    6 clase: clase_vector .

    $default  reduce usando la regla 6 (clase)


Estado 14

   10 clase_vector: TOK_ARRAY tipo . TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 20


Estado 15

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escribirTabla . funciones escribirMain sentencias TOK_LLAVEDERECHA

    TOK_FUNCTION  desplazar e ir al estado 21

    $default  reduce usando la regla 14 (funciones)

    funciones          ir al estado 22
    funct_name         ir al estado 23
    funct_name_params  ir al estado 24
    funcion            ir al estado 25


Estado 16

    3 declaraciones: declaracion declaraciones .

    $default  reduce usando la regla 3 (declaraciones)


Estado 17

   80 identificador: TOK_IDENTIFICADOR .

    $default  reduce usando la regla 80 (identificador)


Estado 18

    4 declaracion: clase identificadores . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  desplazar e ir al estado 26


Estado 19

   11 identificadores: identificador .
   12                | identificador . TOK_COMA identificadores

    TOK_COMA  desplazar e ir al estado 27

    $default  reduce usando la regla 11 (identificadores)


Estado 20

   10 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO . TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 28


Estado 21

   15 funct_name: TOK_FUNCTION . tipo TOK_IDENTIFICADOR

    TOK_INT      desplazar e ir al estado 5
    TOK_BOOLEAN  desplazar e ir al estado 6

    tipo  ir al estado 29


Estado 22

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escribirTabla funciones . escribirMain sentencias TOK_LLAVEDERECHA

    $default  reduce usando la regla 82 (escribirMain)

    escribirMain  ir al estado 30


Estado 23

   16 funct_name_params: funct_name . TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 31


Estado 24

   17 funcion: funct_name_params . sentencias TOK_LLAVEDERECHA

    TOK_IF             desplazar e ir al estado 32
    TOK_WHILE          desplazar e ir al estado 33
    TOK_SCANF          desplazar e ir al estado 34
    TOK_PRINTF         desplazar e ir al estado 35
    TOK_RETURN         desplazar e ir al estado 36
    TOK_IDENTIFICADOR  desplazar e ir al estado 37

    sentencias               ir al estado 38
    sentencia                ir al estado 39
    sentencia_simple         ir al estado 40
    bloque                   ir al estado 41
    asignacion               ir al estado 42
    elemento_vector          ir al estado 43
    condicional              ir al estado 44
    if_statement_sentencias  ir al estado 45
    if_statement             ir al estado 46
    bucle                    ir al estado 47
    while_star               ir al estado 48
    while_end                ir al estado 49
    lectura                  ir al estado 50
    escritura                ir al estado 51
    retorno_funcion          ir al estado 52


Estado 25

   13 funciones: funcion . funciones

    TOK_FUNCTION  desplazar e ir al estado 21

    $default  reduce usando la regla 14 (funciones)

    funciones          ir al estado 53
    funct_name         ir al estado 23
    funct_name_params  ir al estado 24
    funcion            ir al estado 25


Estado 26

    4 declaracion: clase identificadores TOK_PUNTOYCOMA .

    $default  reduce usando la regla 4 (declaracion)


Estado 27

   12 identificadores: identificador TOK_COMA . identificadores

    TOK_IDENTIFICADOR  desplazar e ir al estado 17

    identificadores  ir al estado 54
    identificador    ir al estado 19


Estado 28

   10 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  desplazar e ir al estado 55


Estado 29

   15 funct_name: TOK_FUNCTION tipo . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  desplazar e ir al estado 56


Estado 30

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escribirTabla funciones escribirMain . sentencias TOK_LLAVEDERECHA

    TOK_IF             desplazar e ir al estado 32
    TOK_WHILE          desplazar e ir al estado 33
    TOK_SCANF          desplazar e ir al estado 34
    TOK_PRINTF         desplazar e ir al estado 35
    TOK_RETURN         desplazar e ir al estado 36
    TOK_IDENTIFICADOR  desplazar e ir al estado 37

    sentencias               ir al estado 57
    sentencia                ir al estado 39
    sentencia_simple         ir al estado 40
    bloque                   ir al estado 41
    asignacion               ir al estado 42
    elemento_vector          ir al estado 43
    condicional              ir al estado 44
    if_statement_sentencias  ir al estado 45
    if_statement             ir al estado 46
    bucle                    ir al estado 47
    while_star               ir al estado 48
    while_end                ir al estado 49
    lectura                  ir al estado 50
    escritura                ir al estado 51
    retorno_funcion          ir al estado 52


Estado 31

   16 funct_name_params: funct_name TOK_PARENTESISIZQUIERDO . parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_INT      desplazar e ir al estado 5
    TOK_BOOLEAN  desplazar e ir al estado 6

    $default  reduce usando la regla 19 (parametros_funcion)

    tipo                ir al estado 58
    parametros_funcion  ir al estado 59
    parametro_funcion   ir al estado 60


Estado 32

   41 if_statement_sentencias: TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 61


Estado 33

   44 while_star: TOK_WHILE . TOK_PARENTESISIZQUIERDO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 62


Estado 34

   46 lectura: TOK_SCANF . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  desplazar e ir al estado 63


Estado 35

   47 escritura: TOK_PRINTF . exp

    TOK_NOT                  desplazar e ir al estado 64
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 65
    TOK_MENOS                desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 69
    TOK_IDENTIFICADOR        desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 72
    funct_call_star   ir al estado 73
    constante         ir al estado 74
    constante_logica  ir al estado 75
    constante_entera  ir al estado 76


Estado 36

   48 retorno_funcion: TOK_RETURN . exp

    TOK_NOT                  desplazar e ir al estado 64
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 65
    TOK_MENOS                desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 69
    TOK_IDENTIFICADOR        desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 77
    funct_call_star   ir al estado 73
    constante         ir al estado 74
    constante_logica  ir al estado 75
    constante_entera  ir al estado 76


Estado 37

   36 asignacion: TOK_IDENTIFICADOR . TOK_ASIGNACION exp
   38 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  desplazar e ir al estado 78
    TOK_ASIGNACION         desplazar e ir al estado 79


Estado 38

   17 funcion: funct_name_params sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  desplazar e ir al estado 80


Estado 39

   26 sentencias: sentencia .
   27           | sentencia . sentencias

    TOK_IF             desplazar e ir al estado 32
    TOK_WHILE          desplazar e ir al estado 33
    TOK_SCANF          desplazar e ir al estado 34
    TOK_PRINTF         desplazar e ir al estado 35
    TOK_RETURN         desplazar e ir al estado 36
    TOK_IDENTIFICADOR  desplazar e ir al estado 37

    $default  reduce usando la regla 26 (sentencias)

    sentencias               ir al estado 81
    sentencia                ir al estado 39
    sentencia_simple         ir al estado 40
    bloque                   ir al estado 41
    asignacion               ir al estado 42
    elemento_vector          ir al estado 43
    condicional              ir al estado 44
    if_statement_sentencias  ir al estado 45
    if_statement             ir al estado 46
    bucle                    ir al estado 47
    while_star               ir al estado 48
    while_end                ir al estado 49
    lectura                  ir al estado 50
    escritura                ir al estado 51
    retorno_funcion          ir al estado 52


Estado 40

   28 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  desplazar e ir al estado 82


Estado 41

   29 sentencia: bloque .

    $default  reduce usando la regla 29 (sentencia)


Estado 42

   30 sentencia_simple: asignacion .

    $default  reduce usando la regla 30 (sentencia_simple)


Estado 43

   37 asignacion: elemento_vector . TOK_ASIGNACION exp

    TOK_ASIGNACION  desplazar e ir al estado 83


Estado 44

   34 bloque: condicional .

    $default  reduce usando la regla 34 (bloque)


Estado 45

   42 if_statement: if_statement_sentencias . sentencias

    TOK_IF             desplazar e ir al estado 32
    TOK_WHILE          desplazar e ir al estado 33
    TOK_SCANF          desplazar e ir al estado 34
    TOK_PRINTF         desplazar e ir al estado 35
    TOK_RETURN         desplazar e ir al estado 36
    TOK_IDENTIFICADOR  desplazar e ir al estado 37

    sentencias               ir al estado 84
    sentencia                ir al estado 39
    sentencia_simple         ir al estado 40
    bloque                   ir al estado 41
    asignacion               ir al estado 42
    elemento_vector          ir al estado 43
    condicional              ir al estado 44
    if_statement_sentencias  ir al estado 45
    if_statement             ir al estado 46
    bucle                    ir al estado 47
    while_star               ir al estado 48
    while_end                ir al estado 49
    lectura                  ir al estado 50
    escritura                ir al estado 51
    retorno_funcion          ir al estado 52


Estado 46

   39 condicional: if_statement . TOK_LLAVEDERECHA
   40            | if_statement . TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  desplazar e ir al estado 85


Estado 47

   35 bloque: bucle .

    $default  reduce usando la regla 35 (bloque)


Estado 48

   45 while_end: while_star . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_NOT                  desplazar e ir al estado 64
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 65
    TOK_MENOS                desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 69
    TOK_IDENTIFICADOR        desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 86
    funct_call_star   ir al estado 73
    constante         ir al estado 74
    constante_logica  ir al estado 75
    constante_entera  ir al estado 76


Estado 49

   43 bucle: while_end . sentencias TOK_LLAVEDERECHA

    TOK_IF             desplazar e ir al estado 32
    TOK_WHILE          desplazar e ir al estado 33
    TOK_SCANF          desplazar e ir al estado 34
    TOK_PRINTF         desplazar e ir al estado 35
    TOK_RETURN         desplazar e ir al estado 36
    TOK_IDENTIFICADOR  desplazar e ir al estado 37

    sentencias               ir al estado 87
    sentencia                ir al estado 39
    sentencia_simple         ir al estado 40
    bloque                   ir al estado 41
    asignacion               ir al estado 42
    elemento_vector          ir al estado 43
    condicional              ir al estado 44
    if_statement_sentencias  ir al estado 45
    if_statement             ir al estado 46
    bucle                    ir al estado 47
    while_star               ir al estado 48
    while_end                ir al estado 49
    lectura                  ir al estado 50
    escritura                ir al estado 51
    retorno_funcion          ir al estado 52


Estado 50

   31 sentencia_simple: lectura .

    $default  reduce usando la regla 31 (sentencia_simple)


Estado 51

   32 sentencia_simple: escritura .

    $default  reduce usando la regla 32 (sentencia_simple)


Estado 52

   33 sentencia_simple: retorno_funcion .

    $default  reduce usando la regla 33 (sentencia_simple)


Estado 53

   13 funciones: funcion funciones .

    $default  reduce usando la regla 13 (funciones)


Estado 54

   12 identificadores: identificador TOK_COMA identificadores .

    $default  reduce usando la regla 12 (identificadores)


Estado 55

   10 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO .

    $default  reduce usando la regla 10 (clase_vector)


Estado 56

   15 funct_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR .

    $default  reduce usando la regla 15 (funct_name)


Estado 57

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escribirTabla funciones escribirMain sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  desplazar e ir al estado 88


Estado 58

   22 parametro_funcion: tipo . pfid

    TOK_IDENTIFICADOR  desplazar e ir al estado 89

    pfid  ir al estado 90


Estado 59

   16 funct_name_params: funct_name TOK_PARENTESISIZQUIERDO parametros_funcion . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISDERECHO  desplazar e ir al estado 91


Estado 60

   18 parametros_funcion: parametro_funcion . resto_parametros_funcion

    TOK_PUNTOYCOMA  desplazar e ir al estado 92

    $default  reduce usando la regla 21 (resto_parametros_funcion)

    resto_parametros_funcion  ir al estado 93


Estado 61

   41 if_statement_sentencias: TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_NOT                  desplazar e ir al estado 64
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 65
    TOK_MENOS                desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 69
    TOK_IDENTIFICADOR        desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 94
    funct_call_star   ir al estado 73
    constante         ir al estado 74
    constante_logica  ir al estado 75
    constante_entera  ir al estado 76


Estado 62

   44 while_star: TOK_WHILE TOK_PARENTESISIZQUIERDO .

    $default  reduce usando la regla 44 (while_star)


Estado 63

   46 lectura: TOK_SCANF TOK_IDENTIFICADOR .

    $default  reduce usando la regla 46 (lectura)


Estado 64

   56 exp: TOK_NOT . exp

    TOK_NOT                  desplazar e ir al estado 64
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 65
    TOK_MENOS                desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 69
    TOK_IDENTIFICADOR        desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 95
    funct_call_star   ir al estado 73
    constante         ir al estado 74
    constante_logica  ir al estado 75
    constante_entera  ir al estado 76


Estado 65

   59 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO
   60    | TOK_PARENTESISIZQUIERDO . comparacion TOK_PARENTESISDERECHO

    TOK_NOT                  desplazar e ir al estado 64
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 65
    TOK_MENOS                desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 69
    TOK_IDENTIFICADOR        desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 96
    funct_call_star   ir al estado 73
    comparacion       ir al estado 97
    constante         ir al estado 74
    constante_logica  ir al estado 75
    constante_entera  ir al estado 76


Estado 66

   53 exp: TOK_MENOS . exp

    TOK_NOT                  desplazar e ir al estado 64
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 65
    TOK_MENOS                desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 69
    TOK_IDENTIFICADOR        desplazar e ir al estado 70

    elemento_vector   ir al estado 71
    exp               ir al estado 98
    funct_call_star   ir al estado 73
    constante         ir al estado 74
    constante_logica  ir al estado 75
    constante_entera  ir al estado 76


Estado 67

   77 constante_logica: TOK_TRUE .

    $default  reduce usando la regla 77 (constante_logica)


Estado 68

   78 constante_logica: TOK_FALSE .

    $default  reduce usando la regla 78 (constante_logica)


Estado 69

   79 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce usando la regla 79 (constante_entera)


Estado 70

   38 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO
   57 exp: TOK_IDENTIFICADOR .
   63 funct_call_star: TOK_IDENTIFICADOR . TOK_PARENTESISIZQUIERDO

    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 99
    TOK_CORCHETEIZQUIERDO    desplazar e ir al estado 78

    $default  reduce usando la regla 57 (exp)


Estado 71

   61 exp: elemento_vector .

    $default  reduce usando la regla 61 (exp)


Estado 72

   47 escritura: TOK_PRINTF exp .
   49 exp: exp . TOK_MAS exp
   50    | exp . TOK_MENOS exp
   51    | exp . TOK_DIVISION exp
   52    | exp . TOK_ASTERISCO exp
   54    | exp . TOK_AND exp
   55    | exp . TOK_OR exp

    TOK_AND        desplazar e ir al estado 100
    TOK_OR         desplazar e ir al estado 101
    TOK_MAS        desplazar e ir al estado 102
    TOK_MENOS      desplazar e ir al estado 103
    TOK_DIVISION   desplazar e ir al estado 104
    TOK_ASTERISCO  desplazar e ir al estado 105

    $default  reduce usando la regla 47 (escritura)


Estado 73

   62 exp: funct_call_star . lista_expresiones TOK_PARENTESISDERECHO

    TOK_NOT                  desplazar e ir al estado 64
    TOK_PARENTESISIZQUIERDO  desplazar e ir al estado 65
    TOK_MENOS                desplazar e ir al estado 66
    TOK_TRUE                 desplazar e ir al estado 67
    TOK_FALSE                desplazar e ir al estado 68
    TOK_CONSTANTE_ENTERA     desplazar e ir al estado 69
    TOK_IDENTIFICADOR        desplazar e ir al estado 70

    $default  reduce usando la regla 65 (lista_expresiones)

    elemento_vector    ir al estado 71
    exp                ir al estado 106
    funct_call_star    ir al estado 73
    lista_expresiones  ir al estado 107
    expf               ir al estado 108
    constante          ir al estado 74
    constante_logica   ir al estado 75
    constante_entera   ir al estado 76


Estado 74

   58 exp: constante .

    $default  reduce usando la regla 58 (exp)


Estado 75

   75 constante: constante_logica .

    $default  reduce usando la regla 75 (constante)


Estado 76

   76 constante: constante_entera .

    $default  reduce usando la regla 76 (constante)


Estado 77

   48 retorno_funcion: TOK_RETURN exp .
   49 exp: exp . TOK_MAS exp
   50    | exp . TOK_MENOS exp
   51    | exp . TOK_DIVISION exp
   52    | exp . TOK_ASTERISCO exp
   54    | exp . TOK_AND exp
   55    | exp . TOK_OR exp

    TOK_AND        desplazar e ir al estado 100
    TOK_OR         desplazar e ir al estado 101
    TOK_MAS        desplazar e ir al estado 102
    TOK_MENOS      desplazar e ir al estado 103
    TOK_DIVISION   desplazar e ir al estado 104
    TOK_ASTERISCO  desplazar e ir al estado 105

    $default  reduce usando la regla 48 (retorno_funcion)


Estado 78

   38 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO . exp TOK_CORCHETEDERECHO
